--- a/API/package.json
+++ b/API/package.json
@@ -20,6 +20,7 @@
     "express": "^4.14.0",
     "gulp": "^3.9.1",
     "gulp-nodemon": "^2.2.1",
+    "mongodb": "^2.2.11",
     "mongoose": "^4.6.6"
   }
 }
