--- a/Weather-App/package.json
+++ b/Weather-App/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "Weather-App",
+  "name": "weather-app",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "request": "^2.81.0",
-    "yargs": "^7.1.0"
+    "axios": "^0.13.1",
+    "request": "^2.73.0",
+    "yargs": "^4.8.1"
   }
 }
