--- a/NodeTest/package.json
+++ b/NodeTest/package.json
@@ -5,14 +5,16 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha **/*.test.js",
-    "live-test":"nodemon --exec \"npm test\""
+    "live-test": "nodemon --exec \"npm test\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "expect": "^1.20.2",
+    "express": "^4.15.2",
     "mocha": "^3.3.0",
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.11.0",
+    "supertest": "^3.0.0"
   }
 }
